--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,5 @@
 1.0.3:
     - 'Updated table pensoft_eventreporting_data'
     - builder_table_update_pensoft_eventreporting_data.php
+1.0.4:
+    - 'Related partner name fix'
