--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -28,3 +28,5 @@
     - builder_table_create_pensoft_eventreporting_attendants.php
 1.0.12:
     - 'Add attendance'
+1.0.13:
+    - 'Add attendance skip past events'
