--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -35,3 +35,5 @@
 1.0.15:
     - 'Updated table pensoft_eventreporting_data'
     - builder_table_update_pensoft_eventreporting_data_7.php
+1.0.16:
+    - 'Attendant event id relation'
