event edit; event time and date

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -37,3 +37,5 @@
     - builder_table_update_pensoft_eventreporting_data_7.php
 1.0.16:
     - 'Attendant event id relation'
+1.0.17:
+    - 'Edit event, event date and time'
