--- a/models/eventsreportingattendants/fields.yaml
+++ b/models/eventsreportingattendants/fields.yaml
@@ -7,7 +7,7 @@ fields:
         type: relation
     event:
         label: Event
-        nameFrom: event_name
+        nameFrom: title
         descriptionFrom: description
         span: auto
         type: relation
